--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -353,16 +353,20 @@
 %
 \begin{dedication}
 \index{Dedication@\emph{Dedication}}%
-Dedicated to my wife Andrea and to my parents.
-
-More...
+This report is dedicated to my wife for her patience,\linebreak
+and to my parents for their support and guidance.
 \end{dedication}
 
 
 \begin{acknowledgments}		% Optional
 \index{Acknowledgments@\emph{Acknowledgments}}%
-I wish to thank the multitudes of people who helped me. Time would
-fail me to tell of the multitudes of individuals \ldots
+I would like to thank Bill Balcezak for strongly encouraging and facilitating the completion of my undergraduate and graduate education. 
+I would also like to thank Curt Finch, John Maddalozzo and everyone else at Journyx for their patience, understanding and encouragement.
+
+I would also like to thank my supervisor, Dr. Adnan Aziz, 
+for his enthusiasm, feedback, wisdom, and for teaching one of best classes I've ever taken.
+In addition I would like to thank Dr. Christine Julien, Mr. Bill Bard, Dr. Kathleen Barber and all of the other excellent instructors in the CLEE program.
+Without this amazing program and everyone mentioned above, I would not be who I am today.
 \end{acknowledgments}
 
 
