--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -152,7 +152,7 @@ Then you can place your new element on the page, either declaratively in HTML:
 
 or imperatively with JavaScript\index{JavaScript}:
 
-\begin{lstlisting}[language=JavaScript,caption={Registering a custom element\index{Custom Element} in JavaScript\index{JavaScript}.},label=l:register]
+\begin{lstlisting}[language=JavaScript,caption={Registering a custom element\index{Custom Elements} in JavaScript\index{JavaScript}.},label=l:register]
  var MyElement = document.registerElement('my-element');
 
  // create a new instance of the element
@@ -233,7 +233,7 @@ The following example of a data bound template is something that does \textit{no
 
 Google\index{Google} engineers have advanced a proposal for standardizing 
 Model-Driven Views\index{Model-Driven View}
-but it is not yet part of the standard \tcode{<template>} element~\cite{googledevelopers2014}.
+but it is not yet part of the standard \tcode{<template>}\index{<template>} element~\cite{googledevelopers2014}.
 Instead this functionality can be handled by a JavaScript\index{JavaScript} framework such as React or Polymer.
 Data-bound templates are discussed in more detail in the following chapters.
 
