--- a/latex/chapter-approach.tex
+++ b/latex/chapter-approach.tex
@@ -92,7 +92,7 @@ As previously mentioned, in order to make the
 \tcode{<speakur-discussion>}\index{<speakur-discussion>} element available for use, 
 you must first load the Web Components polyfill\index{polyfill} and then \textit{import} the Speakur element, 
 either from \tcode{github.io} or your own server.
-It is recommended to create your own Firebase\index{Firebase} instance for data security and resource limitation reasons, but even this is not required. 
+I recommended that you create your own Firebase\index{Firebase} instance for data security and resource limitation reasons, but even this is not required. 
 The author's demonstration database will be used by default.
 
 Security\index{security} for web clients engaging in data manipulation 
@@ -105,8 +105,8 @@ The simplicity of this arrangement makes it easier to fit Speakur\index{Speakur}
 \label{bg:mobile}
 Although `native' apps are frequently preferred by mobile users and developers, 
 the mobile web remains an important development platform for the same reason that 
-desktop web apps live alongside native desktop apps; 
-web apps typically do not require installing anything to the device, are always up-to-date, and have a lower barrier to entry overall.
+desktop web apps continue to live alongside native desktop apps; 
+web apps typically do not require installing anything to the device, are always up-to-date, and have a lower barrier to entry overall for users and developers.
 Because Speakur\index{Speakur} is not a standalone application but rather a plug-in designed to be embedded into other web pages or apps, 
 the full document is not under its control.
 This can affect the mobile\index{mobile} user experience\index{user experience (UX)},
