--- a/latex/chapter-conclusions.tex
+++ b/latex/chapter-conclusions.tex
@@ -2,9 +2,28 @@
 \index{Conclusions%
 @\emph{Conclusions}}%
 
+The Web Components\index{Web Components} initiative is an exciting new W3C browser standard for creating web content and applications.
+The fundamental premise is that web content can be componentized, encapsulted\index{encapsulation}, and abstracted\index{abstraction} behind a well-defined APIs\index{API}.
+Eventually this functionality will be delivered directly by the browser without needing a dedicated JavaScript\index{JavaScript} framework.
+%But for the immediate future, using Web Components in your application means that your clients must download a large blob of JavaScript library code -- the polyfill\index{polyfill} --- 
+%that enables Custom Elements\index{Custom Elements}, 
+%shadow DOM\index{Shadow DOM}, 
+%templates\index{HTML!Templates}, and 
+%the component import system\index{HTML!Imports}.
+But for the immediate future, using Web Components in your application means that your clients must download a large blob of JavaScript library code -- the polyfill\index{polyfill} --- 
+that enables its constituent features: 
+Custom Elements\index{Custom Elements}, 
+shadow DOM\index{Shadow DOM}, 
+templates\index{HTML!Templates}, and 
+the component import system\index{HTML!Imports}.
 
-Concluding remarks here...
 
-Summary of lessons learned.
-
-Is this \textit{the future}?
+The Web Components initiative has set out on the right path to becoming a mature, widely deployed technology. 
+New frameworks like Polymer\index{Polymer} provide a smoother developer experience but are themselves still under preliminary development.
+Established frameworks like Angular\index{Angular} have already begun the process of adapting to the new Web Component world. 
+Success will be found at the end of this road as long as framework and component authors are mindful of the guiding principles of Web Components: 
+to be small, focused, extensible, adaptive, 
+and most of all, 
+to deliver the key benefits 
+not only to the software engineers\index{software engineering} who make the web run,
+but to the content \textit{authors} that have made it the most important communications medium in human history.
