--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -18,9 +18,11 @@
 This report is a case study of using W3C Web Components, 
 \index{Web Components}
 a proposed HTML5 extension,
-to implement techniques of encapsulation\index{encapsulation}, abstraction\index{abstraction}, modularity in web application engineering.
+to implement techniques of encapsulation\index{encapsulation}, abstraction\index{abstraction}, 
+and modularity in web application engineering.
 The author designed Speakur\index{Speakur}, a real-time discussion social plugin for the web, 
-as an experiment to determine the viability and maturity of using Web Components to create modern, highly composable web applications. Figure~\ref{f:demo1} shows an example of a Speakur discussion.
+as an experiment to determine the viability and maturity of using Web Components to create modern, highly composable web applications. 
+Figure~\ref{f:demo1} shows an example of a Speakur discussion.
 
 Like most web applications Speakur is written in a combination of HTML markup and the Java\-Script programming language. 
 HTML is a declarative markup language used to create documents --- web pages --- which are viewed with the help of a program called the browser. 
