--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -44,7 +44,7 @@
 \usepackage{makeidx}       	% Package to make an index.
 \usepackage{graphicx}
 
-\usepackage{url}		% Allows good typesetting of web URLs.
+%\usepackage{url}		% Allows good typesetting of web URLs.
 
 \usepackage{booktabs}  % table formatting
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
@@ -61,20 +61,6 @@
 
 % Prestons code listing definitions
 \input{codelistings}
-
-
-%\usepackage{hyperref}  % adds PDF bookmarks and such
-%\hypersetup{
-% colorlinks=true,
-% linkcolor=black,  % blue
-% citecolor=black,  % green
-% urlcolor=black,
-%% pdffitwindow=true,
-% pdftitle={Speakur: a case study of Web Component encapsulation and synchronization},
-% pdfauthor={Preston Landers <planders@utexas.edu>},
-% pdfsubject={TODO... fill me in.},
-% pdfkeywords={HTTP} {REST} {RESTful} {database} {cloud} {API},
-% }
 
 %\usepackage{xunicode}
 %\usepackage[T1]{fontenc}
@@ -104,6 +90,22 @@
 %\usepackage{libertine}%% Only as example for the romans/sans fonts
 %\usepackage{beraserif}
 %\usepackage[scaled=0.9]{beramono}
+
+\usepackage{hyperref}  % adds PDF bookmarks and such
+\hypersetup{
+ colorlinks=true,
+ linkcolor=black,  % blue
+ citecolor=black,  % green
+ urlcolor=black,
+% pdffitwindow=true,
+ pdftitle={Speakur: leveraging Web Components for composable applications},
+ pdfauthor={Preston Landers <planders@utexas.edu>},
+ pdfsubject={A case study in HTML5 Web Components, the Polymer framework, and Firebase.},
+ pdfkeywords={Polymer} {Web Components} {HTML5} {Speakur} {Firebase},
+ }
+
+
+
 
 %\pretolerance=10000
 
@@ -435,7 +437,8 @@ Subsidiary topics include assessing the maturity and suitability of current Web 
 % If you have only one appendix, use the command \appendix instead
 % of \appendices.
 %
-\appendices
+%\appendices
+\appendix
 \index{Appendices@\emph{Appendices}}%
 
 %\include{chapter-appendix1}
